objects/Site__c.object
<CustomObject>
    <fields>
        <fullName>National_Lower_Primary_Address_1__c</fullName>
        <label>National Lower Address 1</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>National_Lower_Primary_Address_2__c</fullName>
        <label>National Lower Address 2</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>National_Lower_Primary_Address_3__c</fullName>
        <label>National Lower Address 3</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>National_Lower_Primary_City__c</fullName>
        <label>National Lower City</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>National_Lower_Primary_Phone__c</fullName>
        <label>National Lower Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>National_Lower_Primary_Postal__c</fullName>
        <label>National Lower Postal</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>National_Lower_Primary_State__c</fullName>
        <label>National Lower State</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>National_Lower_Role__c</fullName>
        <label>National Lower Role</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>National_Lower_URL_1__c</fullName>
        <label>National Lower URL</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>National_Lower_URL_2__c</fullName>
        <label>National Lower URL 2</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>National_Upper2_Chamber__c</fullName>
        <label>National Upper 2 Chamber</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>National_Upper2_First_Name__c</fullName>
        <label>National Upper 2 First Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>National_Upper2_Primary_Address_1__c</fullName>
        <label>National Upper 2 Address 1</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>National_Upper2_Primary_Postal__c</fullName>
        <label>National Upper 2 Postal</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>National_Upper2_Primary_State__c</fullName>
        <label>National Upper 2 State</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>National_Upper_2_District_ID__c</fullName>
        <label>National Upper 2 District ID</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>National_Upper_2_Last_Name__c</fullName>
        <label>National Upper 2 Last Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>National_Upper_2_Party__c</fullName>
        <label>National Upper 2 Party</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>National_Upper_2_Primary_Address_2__c</fullName>
        <label>National Upper 2 Address 2</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>National_Upper_2_Primary_Address_3__c</fullName>
        <label>National Upper 2 Address 3</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>National_Upper_2_Primary_City__c</fullName>
        <label>National Upper 2 City</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>National_Upper_2_Primary_Phone__c</fullName>
        <label>National Upper 2 Phone</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>National_Upper_2_Role__c</fullName>
        <label>National Upper 2 Role</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>National_Upper_2_URL_1__c</fullName>
        <label>National Upper 2 URL</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>National_Upper_2_URL_2__c</fullName>
        <label>National Upper 2 URL 2</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>National_Upper_Chamber__c</fullName>
        <label>National Upper 1 Chamber</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>National_Upper_District_ID__c</fullName>
        <label>National Upper 1 District ID</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>National_Upper_First_Name__c</fullName>
        <label>National Upper 1 First Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>National_Upper_Last_Name__c</fullName>
        <label>National Upper 1 Last Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>National_Upper_Party__c</fullName>
        <label>National Upper 1 Party</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>National_Upper_Primary_Address_1__c</fullName>
        <label>National Upper 1 Address 1</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>National_Upper_Primary_Address_2__c</fullName>
        <label>National Upper 1 Address 2</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>National_Upper_Primary_City__c</fullName>
        <label>National Upper 1 City</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>National_Upper_Primary_Phone__c</fullName>
        <label>National Upper 1 Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>National_Upper_Primary_Postal__c</fullName>
        <label>National Upper 1 Postal</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>National_Upper_Primary_State__c</fullName>
        <label>National Upper 1 State</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>National_Upper_Role__c</fullName>
        <label>National Upper 1 Role</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>National_Upper_URL_1__c</fullName>
        <label>National Upper 1 URL</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>National_Upper_URL_2__c</fullName>
        <label>National Upper 1 URL 2</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>New_Comments_on_Schedule__c</fullName>
        <inlineHelpText>Explanation as to why key milestone date has changed (Project Kickoff, Handoff, Mobilization, Mechanical Completion, PTO, Substantial Completion, 50% Set, CD IFR, CD IFC) . Required when changing any of these dates.</inlineHelpText>
        <label>New Comments on Schedule</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>New_Design_Note__c</fullName>
        <inlineHelpText>Design notes filled out by the Engineering Team weekly to communicate design status schedule, delays, and other design information</inlineHelpText>
        <label>New Design Note</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Nov_Estimated_Performance__c</fullName>
        <description>Needed for customer portal in Diaspark for Borrego O&amp;M</description>
        <inlineHelpText>Needed for customer portal in Diaspark for Borrego O&amp;M</inlineHelpText>
        <label>Nov Estimated Performance</label>
        <precision>18</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Nov_Irradiance_Data__c</fullName>
        <description>for O&amp;M customer portal</description>
        <inlineHelpText>for O&amp;M customer portal</inlineHelpText>
        <label>Nov Irradiance Data</label>
        <precision>18</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>O_M_Handoff_Date__c</fullName>
        <inlineHelpText>Date project handed off to O&amp;M.</inlineHelpText>
        <label>O&amp;M Handoff Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>O_M_Handoff_Status__c</fullName>
        <inlineHelpText>Status of O&amp;M Handoff- defaults to &quot;not scheduled&quot;</inlineHelpText>
        <label>O&amp;M Handoff Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Not Scheduled</fullName>
                </value>
                <value>
                    <fullName>Scheduled</fullName>
                </value>
                <value>
                    <fullName>In-Progress</fullName>
                </value>
                <value>
                    <fullName>Completed and Approved</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>O_M_Manager__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>O&amp;M Manager</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Sites7</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Oct_Estimated_Performance__c</fullName>
        <description>Needed for customer portal in Diaspark for Borrego O&amp;M</description>
        <inlineHelpText>Needed for customer portal in Diaspark for Borrego O&amp;M</inlineHelpText>
        <label>Oct Estimated Performance</label>
        <precision>18</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Oct_Irradiance_Data__c</fullName>
        <description>for O&amp;M customer portal</description>
        <inlineHelpText>for O&amp;M customer portal</inlineHelpText>
        <label>Oct Irradiance Data</label>
        <precision>18</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>On_Site_Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>On Site Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Sites (On Site O&amp;M Contact)</relationshipLabel>
        <relationshipName>OM_Sites</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>On_Site__c</fullName>
        <label>On Site</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Operational_Commissioning_Status__c</fullName>
        <label>Operational Commissioning Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Not Started</fullName>
                </value>
                <value>
                    <fullName>In Progress</fullName>
                </value>
                <value>
                    <fullName>Submitted to QA</fullName>
                </value>
                <value>
                    <fullName>First Stage Approved</fullName>
                </value>
                <value>
                    <fullName>Pending Completion</fullName>
                </value>
                <value>
                    <fullName>Approved</fullName>
                </value>
                <value>
                    <fullName>Corrective Action REquired</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Opp_Created_Date__c</fullName>
        <description>pulls over created date from the related opportunity</description>
        <formula>Opportunity__r.CreatedDate</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>pulls over created date from the related opportunity</inlineHelpText>
        <label>Opp Created Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Opportunity_Owner_SF_ID__c</fullName>
        <description>used in conjunction with lookup helper to bring over Opportunity Owner used for email alerts</description>
        <formula>Opportunity__r.Owner.Id</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>pulls opportunity owner sf id onto record</inlineHelpText>
        <label>Opportunity Owner SF ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Opportunity_Owner__c</fullName>
        <formula>Project__r.AcctSeed__Opportunity__r.Owner.FirstName  &amp; &quot; &quot; &amp; Project__r.AcctSeed__Opportunity__r.Owner.LastName</formula>
        <label>Opportunity Owner</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Opportunity_Qualified_to_PTO__c</fullName>
        <formula>PTO_Date__c - Oppty_qualified_Date_del__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Opportunity Qualified to PTO</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Opportunity_Record_Type__c</fullName>
        <description>pulls over the name of the related opportunity record type, used mostly for reporting not on layouts.</description>
        <formula>Opportunity__r.Record_Type_Name__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>pulls over the name of the related opportunity record type, used mostly for reporting not on layouts.</inlineHelpText>
        <label>Opportunity Record Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Opportunity_Stage_Stamp__c</fullName>
        <description>triggers site processes when opportunity stage is updated</description>
        <label>Opportunity Stage Stamp</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Opportunity__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Sites</relationshipLabel>
        <relationshipName>Sites</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>OpptyStage__c</fullName>
        <formula>If (Opportunity__c = &quot;&quot;, &quot;no Oppty&quot;, Project__r.Opportunity_Stage__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Oppty Stage</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Oppty_Owner_Mgr_Email__c</fullName>
        <description>used mostly for email alerts, auto populated by WF&gt;</description>
        <inlineHelpText>used mostly for email alerts</inlineHelpText>
        <label>Oppty Owner Mgr Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Oppty_qualified_Date_del__c</fullName>
        <description>for VSM reporting
pulls from the project&apos;s opportunity</description>
        <formula>Project__r.Opportunity_Qualified_Date__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Oppty qualified Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Ops_DE1_Drafter__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Ops Engineer - Drafter working on projects</inlineHelpText>
        <label>Ops DE1/Drafter</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Sites9</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Ops_Div_Text__c</fullName>
        <formula>(  Project__r.Ops_Division__r.Name  )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Ops Div Text</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Ops_Division__c</fullName>
        <formula>CASE( 
Project__r.Ops_Division__r.Id, 
&quot;a1O80000008AeJT&quot;, &quot;Oakland&quot;, 
&quot;a1O80000008AeJY&quot;, &quot;San Diego&quot;, 
&quot;a1O80000008AeJi&quot;, &quot;New York&quot;, 
&quot;a1O80000008AeJd&quot;, &quot;Massachusetts&quot;, 
&quot;None&quot; )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Ops Division</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Ops_Engineering_Start_DAte__c</fullName>
        <inlineHelpText>Date that operations engineering begins working on the project</inlineHelpText>
        <label>Ops Engineering Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Ops_Start_to_CDIFR__c</fullName>
        <description>calculates number of days from Ops Start Date to CDIFR</description>
        <formula>CD_Forecast_Release_Date__c - Ops_Engineering_Start_DAte__c</formula>
        <inlineHelpText>calculates number of days from Ops Start Date to CDIFR</inlineHelpText>
        <label>Ops Start to CDIFR</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Option_Status__c</fullName>
        <label>Option Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>In option period</fullName>
                </value>
                <value>
                    <fullName>Extension notice delivered</fullName>
                </value>
                <value>
                    <fullName>Lease commenced (option n/a)</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Overall_Project_Status__c</fullName>
        <formula>CASE( Project__r.Overall_Project_Status__c, 
&quot;Pre-Contract&quot;, &quot;Pre-Contract&quot;,
&quot;New&quot;,&quot;New&quot;,
&quot;Design&quot;,&quot;Design&quot;,
&quot;Construction&quot;,&quot;Construction&quot;,
&quot;Construction Completed&quot;,&quot;Construction Completed&quot;,
&quot;Complete&quot;,&quot;Complete&quot;,
&quot;Completed&quot;,&quot;Complete&quot;,
&quot;On Hold&quot;,&quot;On Hold&quot;,
&quot;Dead&quot;,&quot;Dead&quot;,
null)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Overall Project Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PB3_Date__c</fullName>
        <description>updated via a WF from the PB3 completed date of the CC PB3 corresponding to the Project</description>
        <inlineHelpText>Autofilled from the corresponding PB3</inlineHelpText>
        <label>PB3 Date</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PB9CCApprovalDate__c</fullName>
        <description>Development Only</description>
        <inlineHelpText>Date Contracts Committee approved project at PB 9</inlineHelpText>
        <label>PB9 CC Approval Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>PBDescription__c</fullName>
        <formula>IF(OR(DATEVALUE(PB3_Date__c )&gt;=TODAY(), Project_Kickoff_Date_editable__c&gt;=TODAY()), &quot;03- PB3&quot;, 
IF(Site_Use_Permit_Set_Release__c &gt;= TODAY(), &quot;04-Create SUP&quot;, 
IF(PB_Meeting_1_Actual__c &gt;= TODAY(), &quot;05-1st PB Mtg&quot;, 
IF(OR(Entitlement_Approval_Actual__c &gt;=TODAY(),X50_Forecast_Release_Date__c&gt;=TODAY()),&quot;06- Dev Set/Board Approval&quot;, 
IF(ISA_Received_Date__c&gt;=TODAY(), &quot;07- ISA&quot;, 
IF(Handoff_Date__c &gt;=TODAY(), &quot;10- Handoff&quot;, 
IF(CD_Forecast_Release_Date__c &gt;= TODAY(), &quot;11- CDIFR&quot;, 
IF(CD_IFC_Release_Date__c&gt;= TODAY(), &quot;12- CDIFC&quot;, 
IF(Mobilization_Date__c &gt;= TODAY() , &quot;14-Mobilization&quot;, 
IF(Substantial_Completion_Date__c&gt;=TODAY(),&quot;16- Mech Comp&quot;, 
IF(PTO_Date__c&gt;=TODAY(), &quot;18- PTO&quot;, 
IF(Substantial_Completion_NEW__c&gt;=TODAY(), &quot;21- Sub Comp&quot;, 
IF(Final_Completion__c&gt;=TODAY(), &quot;24- Final Comp&quot;, 
&quot;0&quot;)))))))))))))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>PB Description</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PBOverride__c</fullName>
        <label>PB Override</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>3. PB3</fullName>
                </value>
                <value>
                    <fullName>4. Create SUP</fullName>
                </value>
                <value>
                    <fullName>5. 1st PB Mtg</fullName>
                </value>
                <value>
                    <fullName>6. Dev Set/Board Approval</fullName>
                </value>
                <value>
                    <fullName>7. ISA</fullName>
                </value>
                <value>
                    <fullName>10. Handoff</fullName>
                </value>
                <value>
                    <fullName>12. CDIFC</fullName>
                </value>
                <value>
                    <fullName>14. Mobilization</fullName>
                </value>
                <value>
                    <fullName>16. Mech Comp</fullName>
                </value>
                <value>
                    <fullName>18. PTO</fullName>
                </value>
                <value>
                    <fullName>21. Sub Comp</fullName>
                </value>
                <value>
                    <fullName>24. Final Comp</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>PB_Meeting_1_Actual__c</fullName>
        <label>First Public Meeting Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>PKO_to_HO_Site__c</fullName>
        <formula>Name &amp; &quot; :Kickoff to HO&quot;</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>PKO to HO + Site</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PKO_to_Sub_Site__c</fullName>
        <formula>&quot;Kickoff to Mech: &quot; &amp; Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>PKO to Mech + Site</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PM_Budget__c</fullName>
        <description>pulls value from field of same name on related project, used mostly for snapshots and reporting</description>
        <formula>Project__r.PM_Budget__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>pulls value from field of same name on related project, used mostly for snapshots and reporting</inlineHelpText>
        <label>PM Budget</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>PM_Logged_In__c</fullName>
        <description>displays a 1 if the PM listed on the Site is the one logged in, used mostly for filters/reports</description>
        <formula>IF(  Project_Manager__c  = $User.Id , 1 , 

0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>displays a 1 if the PM listed on the Site is the one logged in, used mostly for filters/reports</inlineHelpText>
        <label>PM Logged In</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>PM_Margin__c</fullName>
        <description>pulls Margin-PM from related project, used mostly with reporting and snapshots</description>
        <formula>Project__r.Margin_PM__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>pulls Margin-PM from related project, used mostly with reporting and snapshots</inlineHelpText>
        <label>PM Margin</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>PTODeadlineid__c</fullName>
        <label>PTODeadlineid</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PTO_Baseline__c</fullName>
        <label>PTO Baseline</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>PTO_Date__c</fullName>
        <inlineHelpText>Permission to Operate, A letter from the Utility defines this date. usually means Placed in Service.</inlineHelpText>
        <label>PTO Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>PTO_Reporting__c</fullName>
        <description>used in Reports, allows grouping by PTO and ability to display the date as well, add help &amp; Description notes</description>
        <formula>PTO_Date__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>used in Reports, allows grouping by PTO and ability to display the date as well, add help &amp; Description notes</inlineHelpText>
        <label>PTO Reporting</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>PTO_to_Final_Completion__c</fullName>
        <description>Number of days between PTO and Final Completion. Used in reports</description>
        <formula>Final_Completion__c - PTO_Date__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Number of days between PTO and Final Completion. Used in reports</inlineHelpText>
        <label>PTO to Final Completion</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>PTO_to_SC__c</fullName>
        <description>shows # of days between PTO and Substantial Completion, mostly for reporting no need to be on layouts</description>
        <formula>Substantial_Completion_NEW__c-PTO_Date__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>shows # of days between PTO and Substantial Completion</inlineHelpText>
        <label>PTO to SC</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>PT_Goal_from_Project__c</fullName>
        <formula>Project__r.PT_Goal__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>PT Goal</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Paid_Contract__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Paid Contract</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Contract.RecordTypeId</field>
                <operation>equals</operation>
                <value>Paid</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Contract</referenceTo>
        <relationshipLabel>Sites (Paid Contract)</relationshipLabel>
        <relationshipName>Sites1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Parcel_ID__c</fullName>
        <label>Parcel ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Performance_Reporting__c</fullName>
        <inlineHelpText>Link to DAS Reporting Site- For Customer Portal</inlineHelpText>
        <label>Performance Reporting</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Powertrack_Site_ID__c</fullName>
        <externalId>true</externalId>
        <inlineHelpText>site id provided by powertrack to identify their associated Site</inlineHelpText>
        <label>Data Platform Site ID</label>
        <length>150</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Pre_Construction_Manager__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Look up to User record.</description>
        <inlineHelpText>Look up to User record.</inlineHelpText>
        <label>Pre-Construction Manager</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Sites0ySQ</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Pre_mob_Closeout_O_M_Consolidated_Projec__c</fullName>
        <description>Googledrive shared link for checklist editing/monitoring</description>
        <inlineHelpText>Googledrive shared link for checklist editing/monitoring</inlineHelpText>
        <label>Pre-mob/Closeout/O&amp;M Consolidated Projec</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Previous_Month_PTO_Date__c</fullName>
        <inlineHelpText>used in project status report</inlineHelpText>
        <label>Previous Month PTO Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Primary_O_M_Contact_2__c</fullName>
        <description>used with lookup helper</description>
        <formula>Opportunity__r.Account.Primary_O_M_Contact__r.Id</formula>
        <inlineHelpText>pulls primary O&amp;M contact from related account/contacts based on selection of Primary O&amp;M type in the Contact Type field</inlineHelpText>
        <label>Primary O&amp;M Contact 2</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Primary_O_M_Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>updated via lookup helper</description>
        <inlineHelpText>pulls over name of contact in related account this is marked Primary O&amp;M Contact in Contact Type field</inlineHelpText>
        <label>Primary O&amp;M Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Sites (Primary O&amp;M Contact)</relationshipLabel>
        <relationshipName>Sites1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Prior_50_Set_Date__c</fullName>
        <label>Prior 50% Set Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Prior_CD_IFC_Date__c</fullName>
        <label>Prior CD IFC Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Prior_CD_IFR_Date__c</fullName>
        <label>Prior CD IFR Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Prior_Deadline_Date__c</fullName>
        <label>Prior Deadline Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Prior_Design_Stage__c</fullName>
        <description>Takes the previous design stage when the design stage is changed.</description>
        <label>Prior Design Stage</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Prior_Handoff_Date__c</fullName>
        <label>Prior Handoff Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Prior_Mechanical_Completion_Date__c</fullName>
        <label>Prior Mechanical Completion Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Prior_Mobilization_Date__c</fullName>
        <label>Prior Mobilization Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Prior_PTO_Date__c</fullName>
        <label>Prior PTO Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Prior_Product_Delivery_Date__c</fullName>
        <label>Prior Product Delivery Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Prior_Site_Name__c</fullName>
        <label>Prior Site Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Prior_Substantial_Completion_Date__c</fullName>
        <label>Prior Substantial Completion Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ProcessBlockDescription__c</fullName>
        <formula>TEXT(ProcessBlock__c) &amp; &quot; &quot; &amp;PBDescription__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Process Block Description</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ProcessBlock__c</fullName>
        <formula>IF(Land_Lease_LOI_Date__c&gt;=TODAY(), 1, 
IF(OR(DATEVALUE(PB3_Date__c )&gt;=TODAY(), DATEVALUE(PB3_Date__c )&gt;=TODAY()), 3, 
IF(Site_Use_Permit_Set_Release__c &gt;= TODAY(), 4, 
IF(PB_Meeting_1_Actual__c &gt;= TODAY(), 5, 
IF(OR(Entitlement_Approval_Actual__c &gt;=TODAY(),X50_Forecast_Release_Date__c&gt;=TODAY()),6, 
IF(ISA_Received_Date__c&gt;=TODAY(), 7,
IF(Handoff_Date__c &gt;=TODAY(), 10, 
IF(CD_Forecast_Release_Date__c &gt;= TODAY(), 11, 
IF(CD_IFC_Release_Date__c&gt;= TODAY(), 12, 
IF(Mobilization_Date__c &gt;= TODAY() , 14,
IF(Substantial_Completion_Date__c&gt;=TODAY(),16, 
IF(PTO_Date__c&gt;=TODAY(), 18,
IF(Substantial_Completion_NEW__c&gt;=TODAY(), 21,
IF(Final_Completion__c&gt;=TODAY(), 24,
0))))))))))))))</formula>
        <label>Process Block</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ProductDeliveryDateUpdated__c</fullName>
        <inlineHelpText>Date any Milestone Date is Updated- If no update is needed, enter today&apos;s date so the Project Team knows you looked at the field.</inlineHelpText>
        <label>Milestone Dates Updated</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Production_Modeling__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Production Modeling</label>
        <referenceTo>Production_Modeling__c</referenceTo>
        <relationshipLabel>Production Modelling</relationshipLabel>
        <relationshipName>Sites_Prod_Mod</relationshipName>
        <type>Lookup</type>
    </fields>
</CustomObject>